--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      let socket = io.connect("http://localhost:5000");
+      let socket = io.connect("https://chattingapp-6edc3c7t.b4a.run/");
     </script>
     <script>
       let sendbtn = document.querySelector("button");
